improve: search input style

--- a/src/styles/search/search.less
+++ b/src/styles/search/search.less
@@ -221,7 +221,7 @@
 
 
 /* Mobile */
-@media(max-width: 767px) {
+@media (max-width: 767px) {
     .search-container {
         .search-header {
             width: auto !important;
@@ -238,9 +238,9 @@
                 margin-top: 0;
                 transform: translateY(0px);
                 input {
-                    height: 36px;
-                    padding-top: 3px;
-                    padding-left: 36px;
+                    height: 36px !important;
+                    line-height: 18px !important;
+                    padding: 8px 12px 8px 36px;
                 }
                 i {
                     padding-left: 4px;
