fix: image card behaviour

--- a/src/styles/common/imagecard.less
+++ b/src/styles/common/imagecard.less
@@ -18,7 +18,7 @@
         border-radius: @image-card-corner;
         background-repeat: no-repeat;
         background-size: cover;
-        transition: 200ms;
+        transition: filter 200ms ease-in-out;
         position: relative;
         z-index: 10;
     }
