optimize: remove font face

--- a/src/styles/basic/layout.less
+++ b/src/styles/basic/layout.less
@@ -9,7 +9,7 @@ body{
     min-height: 100vh;
     scroll-behavior: smooth;
     background: @color-background-primary;
-    font-family: Noble Scarlet, MicroSoft Yahei, Heiti SC, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif
+    font-family: MicroSoft Yahei UI, Heiti SC, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif
 }
 
 @scrollbar-width: 8px;
