improve: styles of banner

--- a/src/styles/landing/banner.less
+++ b/src/styles/landing/banner.less
@@ -71,6 +71,7 @@
         }
         &-copyright {
             margin-top: 10rem;
+            font-weight: 300;
             &-item {
                 font-size: 1rem;
                 text-align: center;
