improve: page optimize

--- a/src/styles/pic/pic.less
+++ b/src/styles/pic/pic.less
@@ -1,6 +1,6 @@
 .pic-container {
     width: calc(100% - 128px);
-    padding: 0 64px 24px 64px;
+    padding: 0 64px 0 64px;
     min-height: 100vh;
     display: flex;
     justify-content: center;
