--- a/src/styles/common/infinite.less
+++ b/src/styles/common/infinite.less
@@ -1,4 +1,6 @@
 .loading-spiral {
-    border: 2.5px solid @color-primary !important;
+    width: 28px !important;
+    height: 26px !important;
+    border: 2px solid @color-primary !important;
     border-right: transparent !important;
 }
