--- a/src/styles/main.less
+++ b/src/styles/main.less
@@ -9,6 +9,7 @@
 @import './common/waterfall.less';
 @import './common/back2top.less';
 @import './common/infinite.less';
+@import './common/contextmenu.less';
 
 /* Views */
 
