--- a/src/styles/common/imagecard.less
+++ b/src/styles/common/imagecard.less
@@ -2,6 +2,11 @@
 @image-card-margin: 8px;
 @image-card-corner: 16px;
 
+.image-card-wrapper {
+    width: max-content;
+    height: max-content;
+}
+
 .image-card {
     width: @image-card-width;
     margin: @image-card-margin;
