--- a/src/styles/pic/pic.less
+++ b/src/styles/pic/pic.less
@@ -58,6 +58,13 @@
         }
     }
 }
+@media (max-width: 1366px) {
+    .pic {
+        &-side {
+            width: 386px;
+        }
+    }
+}
 @media(max-width: 1024px) {
     .pic {
         &-side {
