--- a/src/styles/pic/related.less
+++ b/src/styles/pic/related.less
@@ -1,5 +1,6 @@
 .pic-related {
-    margin-top: 32px;
+    margin-top: 28px;
+    margin-bottom: 40px;
     &-title {
         font-size: 26px;
         color: @color-primary;
@@ -38,8 +39,7 @@
 /* iPad / iPad Pro protrait */
 @media screen and (orientation: portrait) and (max-width: 1024px) {
     .pic-related {
-        margin-top: 28px;
-        margin-bottom: 24px;    // 防止页面屁股着地
+        margin-bottom: 32px;
         &-title {
             font-size: 22px;
         }
@@ -49,8 +49,7 @@
 /* Mobile */
 @media (max-width: 767px) {
     .pic-related {
-        margin-top: 28px;
-        margin-bottom: 24px;    // 防止页面屁股着地
+        margin-bottom: 32px;
         &-title {
             font-size: 22px;
         }
