add: mobile operation zone

--- a/src/styles/pic/presentation.less
+++ b/src/styles/pic/presentation.less
@@ -163,6 +163,39 @@
                 .no-select();
             }
         }
+        &-action {
+            display: none;
+            margin-top: 28px;
+            padding: 14px 0;
+            align-items: center;
+            justify-content: center;
+            border-radius: 12px;
+            border: 1px dashed @color-primary;
+            i {
+                width: 26px;
+                height: 26px;
+                margin-right: 54px;
+                display: flex;
+                align-items: center;
+                justify-content: center;
+                svg {
+                    path {
+                        transition: 150ms all ease-in-out;
+                    }
+                }
+            }
+            i:hover {
+                cursor: pointer;
+                svg {
+                    path {
+                        fill: lighten(@color-primary, 10%);
+                    }
+                }
+            }
+            i:last-of-type {
+                margin-right: 0;
+            }
+        }
     }
 }
 
@@ -233,6 +266,9 @@
             &-title {
                 font-size: 22px;
             }
+            &-action {
+                display: flex;
+            }
         }
     }
 }
@@ -262,6 +298,9 @@
             float: left;
             &-title {
                 font-size: 22px;
+            }
+            &-action {
+                display: flex;
             }
         }
     }
