fix: overlay styles

--- a/src/styles/pic/overlay.less
+++ b/src/styles/pic/overlay.less
@@ -2,8 +2,10 @@
     top: 0;
     left: 0;
     position: absolute;
-    width: 100%;
-    height: 100%;
+    width: 100vw;
+    height: 100vh;
+    max-width: 100vw;
+    max-height: 100vh;
     z-index: 99;
     background: lighten(@color-primary, 25%);
     display: flex;
