--- a/src/styles/pic/pic.less
+++ b/src/styles/pic/pic.less
@@ -43,6 +43,17 @@
     }
 }
 
+// notice
+.download-notice-container {
+    .el-notification__group {
+        .el-notification__content {
+            margin: 2px 0 0;
+            color: @color-primary;
+            font-weight: 600;
+        }
+    }
+}
+
 /* Responsive */
 @media(max-width: 1680px) {
     .pic {
