fix: paginator style issue

--- a/src/styles/pic/presentation.less
+++ b/src/styles/pic/presentation.less
@@ -62,7 +62,6 @@
         }
         &-back {
             width: 72px;
-            flex-grow: 1;
             i {
                 margin-right: 8px;
             }
@@ -76,9 +75,12 @@
         }
         &-number {
             flex-grow: 1;
+            text-align: center;
             justify-self: center;
         }
         &-next {
+            width: 72px;
+            text-align: right;
             justify-self: flex-end;
             i {
                 margin-left: 8px;
