improve: icon replacement & copy link func

--- a/src/styles/main.less
+++ b/src/styles/main.less
@@ -9,7 +9,7 @@
 @import './common/waterfall.less';
 @import './common/back2top.less';
 @import './common/infinite.less';
-@import './common/contextmenu.less';
+@import './common/notice.less';
 
 /* Views */
 
