fix: add source info of search notify to pic

--- a/src/styles/pic/presentation.less
+++ b/src/styles/pic/presentation.less
@@ -95,7 +95,7 @@
         }
     }
     .pic-presentation-info {
-        margin: 32px 0;
+        margin: 24px 0 32px 0;
         width: 100%;
         &-title {
             font-size: 26px;
