--- a/src/styles/search/search.less
+++ b/src/styles/search/search.less
@@ -42,6 +42,9 @@
                 border: 1px solid lighten(@color-text-primary, 10%);
                 transition: 200ms ease-in-out;
             }
+            input::-webkit-input-placeholder {
+                color: lighten(@color-text-primary, 12.5%);
+            }
             input:focus {
                 background: #fff;
                 border: 1px solid @color-text-primary;
