fix: landing box styles

--- a/src/styles/landing/landing.less
+++ b/src/styles/landing/landing.less
@@ -1,3 +1,6 @@
+.landing-component-default {
+    background: lighten(@color-primary, 5%);
+}
 .landing-container {
     padding: 2rem 4rem;
     position: relative;
