--- a/src/styles/pic/related.less
+++ b/src/styles/pic/related.less
@@ -25,6 +25,12 @@
         margin-top: 16px;
         margin-left: -8px;
     }
+    &-content-completed {
+        font-weight: 600;
+        margin: 32px 0 72px 0;
+        color: @color-text-primary;
+        user-select: none;
+    }
 }
 
 /* Responsive */
