add: block keyword

--- a/src/styles/search/search.less
+++ b/src/styles/search/search.less
@@ -126,6 +126,14 @@
             }
         }
     }
+
+    .search-content-blocked {
+        width: 100%;
+        text-align: center;
+        margin-top: 1.5rem;
+        color: @color-text-primary;
+        font-weight: 600;
+    }
 }
 
 // notify
