fix: change to the right color var

--- a/src/styles/common/infinite.less
+++ b/src/styles/common/infinite.less
@@ -1,6 +1,6 @@
 .loading-spiral {
     width: 28px !important;
     height: 26px !important;
-    border: 2px solid @color-primary !important;
+    border: 2px solid @color-text-primary !important;
     border-right: transparent !important;
 }
