--- a/src/styles/pic/download.less
+++ b/src/styles/pic/download.less
@@ -2,7 +2,7 @@
     margin-top: 28px;
     &-title {
         font-size: 26px;
-        color: @color-primary;
+        color: @color-text-primary;
         font-weight: 600;
         letter-spacing: 0.05em;
         .no-select();
