--- a/src/styles/pic/related.less
+++ b/src/styles/pic/related.less
@@ -3,7 +3,7 @@
     margin-bottom: 40px;
     &-title {
         font-size: 26px;
-        color: @color-primary;
+        color: @color-text-primary;
         font-weight: 600;
         letter-spacing: 0.05em;
         .no-select();
