--- a/src/styles/rank/modeswitcher.less
+++ b/src/styles/rank/modeswitcher.less
@@ -27,18 +27,18 @@
 .rank-mode-item:hover {
     cursor: pointer;
     span {
-        color: lighten(@color-primary, 10%);
+        color: lighten(@color-text-primary, 10%);
     }
 }
 .rank-mode-item-picked {
     span {
-        color: lighten(@color-primary, 17.5%);
+        color: lighten(@color-text-primary, 17.5%);
     }
 }
 .rank-mode-item-picked:hover {
     cursor: no-drop;
     span {
-        color: lighten(@color-primary, 17.5%);
+        color: lighten(@color-text-primary, 17.5%);
     }
 }
 
