--- a/src/styles/rank/rank.less
+++ b/src/styles/rank/rank.less
@@ -123,7 +123,7 @@
 @import './dateswitcher.less';
 
 /* iPad */
-.ipad-only {
+.rank-ipad-only {
     @media screen and (orientation: landscape) {
         @media (max-width: 1366px) {
             .rank-header {
