--- a/src/styles/search/search.less
+++ b/src/styles/search/search.less
@@ -58,7 +58,7 @@
         &-close {
             float: right;
             transition: 200ms ease-in-out;
-            color: @color-primary;
+            color: @color-text-primary;
             font-size: 36px;
             margin-top: 4px;
             transform: translateX(8px); // 对齐下方内容
@@ -177,7 +177,7 @@
 }
 
 /* iPad */
-.ipad-only {
+.search-ipad-only {
     @media screen and (orientation: landscape) {
         @media (max-width: 1366px) {
             .search-header {
