--- a/src/styles/common/notice.less
+++ b/src/styles/common/notice.less
@@ -3,7 +3,7 @@
     .el-notification__group {
         .el-notification__content {
             margin: 2px 0 0;
-            color: @color-primary;
+            color: @color-text-primary;
             font-weight: 600;
             .notice-link {
                 margin: 2px;
@@ -12,7 +12,7 @@
             }
             .notice-link:hover {
                 cursor: pointer;
-                color: lighten(@color-primary, 10%);
+                color: lighten(@color-text-primary, 10%);
             }
             .notice-link:last-child {
                 margin-right: 0;
