--- a/src/styles/landing/searchbox.less
+++ b/src/styles/landing/searchbox.less
@@ -32,7 +32,7 @@
         input {
             font-size: 1.125rem;
             background: rgba(255,255,255, 0.75);
-            color: @color-primary;
+            color: @color-text-primary;
             text-align: center;
             transition: 50ms;
             border-radius: 2rem;
