fix: style issue

--- a/src/styles/common/waterfall.less
+++ b/src/styles/common/waterfall.less
@@ -2,7 +2,7 @@
     position: relative;
     .waterfall-container {
         margin: 0 auto;
-        width: @col * @image-card-width + @image-card-margin * 2 * @col;
+        width: @col * @image-card-width + @image-card-margin * 2 * @col !important;
     }
 }
 
