--- a/src/styles/search/search.less
+++ b/src/styles/search/search.less
@@ -161,7 +161,7 @@
     @media(max-width: @trigger-width) {
         width: @container-width - 8px !important;
     }
-    .rank-component-width-responsive-mixin(@col - 1, @min-col, @margin);
+    .search-component-width-responsive-mixin(@col - 1, @min-col, @margin);
 }
 
 /* Responsive */
@@ -186,7 +186,7 @@
             .search-suggestion {
                 width: 1176px !important;
             }
-            &-content {
+            .search-content {
                 .waterfall-wrapper {
                     .waterfall-container {
                         width: 1184px !important;
@@ -201,7 +201,7 @@
             .search-suggestion {
                 width: 880px !important;
             }
-            &-content {
+            .search-content {
                 .waterfall-wrapper {
                     .waterfall-container {
                         width: 888px !important;
@@ -218,7 +218,7 @@
             .search-suggestion {
                 width: 880px !important;
             }
-            &-content {
+            .search-content {
                 .waterfall-wrapper {
                     .waterfall-container {
                         width: 888px !important;
@@ -233,7 +233,7 @@
             .search-suggestion {
                 width: 584px !important;
             }
-            &-content {
+            .search-content {
                 .waterfall-wrapper {
                     .waterfall-container {
                         width: 592px !important;
