add: artist page

--- a/src/styles/main.less
+++ b/src/styles/main.less
@@ -17,4 +17,5 @@
 @import './rank/rank.less';
 @import './pic/pic.less';
 @import './search/search.less';
+@import './artist/artist.less';
 @import './404/404.less';
