add: artist events

--- a/src/styles/artist/artist.less
+++ b/src/styles/artist/artist.less
@@ -1,4 +1,8 @@
 .artist-container {
+    min-height: 100vh;
+    .el-loading-mask {
+        background-color: #fff;
+    }
     .infinite-loading-container {
         .infinite-status-prompt {
             padding: 42px 0 !important;
