improve: tweak styles

--- a/src/styles/artist/detail.less
+++ b/src/styles/artist/detail.less
@@ -85,3 +85,15 @@
         }
     }
 }
+
+// mobile
+
+@media(max-width: 767px) {
+    .artist-detail {
+        &-content {
+            &-name {
+                font-size: 24px;
+            }
+        }
+    }
+}
