--- a/src/styles/artist/detail.less
+++ b/src/styles/artist/detail.less
@@ -25,6 +25,8 @@
             }
             &-data {
                 display: flex;
+                justify-content: center;
+                align-items: center;
                 .overview-data {
                     display: flex;
                     flex-direction: column;
