fix: overlay style issue

--- a/src/styles/pic/overlay.less
+++ b/src/styles/pic/overlay.less
@@ -1,12 +1,12 @@
 .pic-overlay {
     top: 0;
     left: 0;
-    position: absolute;
+    position: fixed;
     width: 100vw;
     height: 100vh;
     max-width: 100vw;
     max-height: 100vh;
-    z-index: 99;
+    z-index: 999;
     background: lighten(@color-primary, 25%);
     display: flex;
     flex-direction: column;
