add: github work flow & bug fix

--- a/src/styles/pic/pic.less
+++ b/src/styles/pic/pic.less
@@ -27,6 +27,10 @@
     overflow: hidden;
 }
 
+.pic-container-failed {
+    .pic-container-loading();
+}
+
 .pic {
     height: max-content;
     margin: 0 auto;
