--- a/src/styles/landing/banner.less
+++ b/src/styles/landing/banner.less
@@ -5,7 +5,9 @@
     box-shadow: @shadow-medium;
     border-radius: 1rem;
     background-repeat: no-repeat;
-    background-size: cover;
+    background-size: 100%;
+    background-position-x: center;
+    background-position-y: 0;
     position: relative;
     transition: 0.5s ease-in-out;
     transition-property: max-height;
@@ -102,6 +104,7 @@
     .banner-wrapper {
         height: 704px;
         max-height: 214px;
+        background-position-y: 15%;
     }
     .banner-expanded {
         max-height: 704px;
@@ -120,10 +123,25 @@
     }
 }
 
+// iPad Pro
+@media(max-width: 1024px) and (max-height: 1366px) {
+    .banner-wrapper {
+        background-size: 135%;
+    }
+}
+
+// iPad
+@media(max-width: 768px) and (max-height: 1024px) {
+    .banner-wrapper {
+        background-size: 180%;
+    }
+}
+
 @media (max-height: 754px) {
     .banner-wrapper {
         height: 690px;
-        max-height: 200px;
+        max-height: 240px;
+        background-size: 120%;
     }
     .banner-expanded {
         max-height: 690px;
@@ -139,6 +157,8 @@
     .banner-wrapper {
         height: 600px;
         max-height: 200px;
+        background-size: 300%;
+        background-position-y: 10%;
     }
     .banner-expanded {
         max-height: 600px;
@@ -172,5 +192,13 @@
                 }
             }
         }
+    }
+}
+
+// iPhone SE
+@media(max-width: 320px) and (max-height: 568px) {
+    .banner-wrapper {
+        max-height: 182px;
+        background-size: 350%;
     }
 }
