--- a/src/styles/landing/rankbox.less
+++ b/src/styles/landing/rankbox.less
@@ -5,10 +5,12 @@
     border-radius: 1rem;
     position: relative;
     background-repeat: no-repeat;
-    background-size: cover;
     display: flex;
     opacity: 1;
     transition: 500ms ease-in-out;
+    background-size: 100%;
+    background-position-x: center;
+    background-position-y: 92%;
 }
 .rankbox-hide {
     opacity: 0;
@@ -59,12 +61,31 @@
 @media (max-height: 754px) {
     .rankbox-wrapper {
         height: 202px;
+        background-size: 120%;
+    }
+}
+
+// iPad Pro
+@media(max-width: 1024px) and (max-height: 1366px) {
+    .rankbox-wrapper {
+        background-size: 135%;
+    }
+}
+
+// iPad
+@media(max-width: 768px) and (max-height: 1024px) {
+    .rankbox-wrapper {
+        background-size: 180%;
+        background-position-y: 100%;
     }
 }
 
 /* Mobile */
 
 @media (max-width: 767px) {
+    .rankbox-wrapper {
+        background-size: 300%;
+    }
     .rankbox {
         span {
             font-size: 24px;
@@ -74,5 +95,27 @@
                 margin: 0 28px;
             }
         }
+    }
+}
+
+// iPhone 7P
+@media(max-width: 414px) and (max-height: 736px) {
+    .rankbox-wrapper {
+        background-position-y: 82%;
+    }
+}
+
+// iPhone X
+@media(max-width: 375px) and (max-height: 812px) {
+    .rankbox-wrapper {
+        background-position-y: 95%;
+    }
+}
+
+// iPhone SE
+@media(max-width: 320px) and (max-height: 568px) {
+    .rankbox-wrapper {
+        background-size: 350%;
+        background-position-y: 91.5%;
     }
 }
