--- a/src/styles/landing/searchbox.less
+++ b/src/styles/landing/searchbox.less
@@ -5,9 +5,11 @@
     border-radius: 1rem;
     position: relative;
     background-repeat: no-repeat;
-    background-size: cover;
     opacity: 1;
     transition: 500ms ease-in-out;
+    background-size: 100%;
+    background-position-x: center;
+    background-position-y: 50%;
 }
 .searchbox-hide {
     opacity: 0;
@@ -80,6 +82,8 @@
     .searchbox-wrapper {
         width: 100%;
         height: 240px;
+        background-size: 120%;
+        background-position-y: 50%;
     }
     .searchbox {
         padding: 22px 64px;
@@ -94,9 +98,28 @@
     }
 }
 
+// iPad Pro
+@media(max-width: 1024px) and (max-height: 1366px) {
+    .searchbox-wrapper {
+        background-size: 135%;
+        background-position-y: 50%;
+    }
+}
+
+// iPad
+@media(max-width: 768px) and (max-height: 1024px) {
+    .searchbox-wrapper {
+        background-size: 180%;
+        background-position-y: 55%;
+    }
+}
+
 /* Mobile */
 
 @media(max-width: 767px) {
+    .searchbox-wrapper {
+        background-size: 300%;
+    }
     .searchbox {
         padding: 24px 8px;
         &-title {
@@ -108,5 +131,43 @@
                 max-width: 960px;
             }
         }
+    }
+}
+
+// Pixel 2 XL
+@media(max-width: 414px) and (max-height: 823px) {
+    .searchbox-wrapper {
+        background-position-y: 45%;
+    }
+}
+
+
+// iPhone 7P
+@media(max-width: 414px) and (max-height: 736px) {
+    .searchbox-wrapper {
+        background-position-y: 45%;
+    }
+}
+
+
+// iPhone X
+@media(max-width: 375px) and (max-height: 812px) {
+    .searchbox-wrapper {
+        background-position-y: 40%;
+    }
+}
+
+// iPhone 7
+@media(max-width: 375px) and (max-height: 667px) {
+    .searchbox-wrapper {
+        background-position-y: 50%;
+    }
+}
+
+// iPhone SE
+@media(max-width: 320px) and (max-height: 568px) {
+    .searchbox-wrapper {
+        background-size: 350%;
+        background-position-y: 47.5%;
     }
 }
