--- a/src/styles/pic/pic.less
+++ b/src/styles/pic/pic.less
@@ -31,6 +31,10 @@
     .pic-container-loading();
 }
 
+.pic-container-lockscroll {
+    overflow: hidden !important;
+}
+
 .pic {
     height: max-content;
     margin: 0 auto;
@@ -185,3 +189,4 @@
 @import './author.less';
 @import './related.less';
 @import './download.less';
+@import './lightbox.less';
