--- a/src/styles/pic/presentation.less
+++ b/src/styles/pic/presentation.less
@@ -14,6 +14,7 @@
             height: 0;
             border-radius: 0 0 16px 16px;
             position: relative;
+            cursor: zoom-in;
         }
         .el-loading-mask {
             border-radius: 0 0 16px 16px;
