improve: optimize for 2K screen

--- a/src/styles/landing/landing.less
+++ b/src/styles/landing/landing.less
@@ -15,6 +15,16 @@
     }
 }
 
+// 2k
+
+@media(min-height: 1200px) and (min-width: 1960px) {
+    .landing-container {
+        transform: scale(1.45) translateY(16.25%)
+    }
+}
+
+// mobile
+
 @media(max-width: 767px) {
     .landing-container {
         padding: 20px;
