--- a/src/styles/pic/presentation.less
+++ b/src/styles/pic/presentation.less
@@ -170,6 +170,19 @@
 }
 
 /* Responsive */
+
+// 2k
+@media(min-width: 2560px) and (min-height: 1440px) {
+    .pic-presentation-image-wrapper {
+        position: relative;
+        .pic-presentation-image {
+            max-width: 1680px;
+            max-height: 1120px;
+        }
+    }
+}
+
+// smaller screen
 @media(max-width: 1680px) {
     .pic-presentation-image-wrapper {
         .pic-presentation-image {
