fix: styles on 2K screen

--- a/src/styles/landing/landing.less
+++ b/src/styles/landing/landing.less
@@ -18,8 +18,8 @@
 // 2k
 
 @media(min-height: 1200px) and (min-width: 1960px) {
-    .landing-container {
-        transform: scale(1.45) translateY(16.25%)
+    .landing {
+        transform: scale(1.175) translateY(12.5%)
     }
 }
 
